[gd_scene load_steps=29 format=3 uid="uid://xxaoff7gwbrm"]

[ext_resource type="Script" uid="uid://cq211xeu41o8m" path="res://personagem/player.gd" id="1_flj5s"]
[ext_resource type="Texture2D" uid="uid://b0g1y72ifokn2" path="res://sprites/novasanims/idle.png" id="2_cpxa8"]
[ext_resource type="Texture2D" uid="uid://dtdcjeuee7101" path="res://sprites/novasanims/attack.png" id="2_jv6l4"]
[ext_resource type="Texture2D" uid="uid://cips32m8gcx84" path="res://sprites/novasanims/jump.png" id="4_arcd1"]
[ext_resource type="Texture2D" uid="uid://38enqu3m7jje" path="res://sprites/novasanims/walk.png" id="4_wsk0a"]
[ext_resource type="PackedScene" uid="uid://bho83iyp1dh4w" path="res://personagem/attack_hitbox_container.tscn" id="6_061al"]

[sub_resource type="AtlasTexture" id="AtlasTexture_061al"]
atlas = ExtResource("2_jv6l4")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ar424"]
atlas = ExtResource("2_jv6l4")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_yfrqe"]
atlas = ExtResource("2_jv6l4")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8btq7"]
atlas = ExtResource("2_cpxa8")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_npb2u"]
atlas = ExtResource("2_cpxa8")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7jpbu"]
atlas = ExtResource("2_cpxa8")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_aunjw"]
atlas = ExtResource("4_arcd1")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_yqh2q"]
atlas = ExtResource("4_arcd1")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_e3fmm"]
atlas = ExtResource("4_arcd1")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_nj0rf"]
atlas = ExtResource("4_arcd1")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_0gt4n"]
atlas = ExtResource("4_arcd1")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dqyxi"]
atlas = ExtResource("4_arcd1")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xdr3s"]
atlas = ExtResource("4_arcd1")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_nptlv"]
atlas = ExtResource("4_arcd1")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_08l2k"]
atlas = ExtResource("4_arcd1")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dpi7t"]
atlas = ExtResource("4_wsk0a")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_tqpaj"]
atlas = ExtResource("4_wsk0a")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_n7cob"]
atlas = ExtResource("4_wsk0a")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_w7ng8"]
atlas = ExtResource("4_wsk0a")
region = Rect2(144, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_q1ej8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_061al")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ar424")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yfrqe")
}],
"loop": false,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8btq7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_npb2u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7jpbu")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_aunjw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yqh2q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e3fmm")
}],
"loop": false,
"name": &"jump_double",
"speed": 5.0
}, {
"frames": [],
"loop": false,
"name": &"jump_end",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nj0rf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0gt4n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dqyxi")
}],
"loop": true,
"name": &"jump_loop",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xdr3s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nptlv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_08l2k")
}],
"loop": false,
"name": &"jump_start",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dpi7t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tqpaj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n7cob")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w7ng8")
}],
"loop": true,
"name": &"run",
"speed": 6.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ry2ya"]
radius = 11.912798
height = 46.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n5c32"]
size = Vector2(16.4011, 48.1748)

[node name="Player" type="CharacterBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_flj5s")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-32, -40)
sprite_frames = SubResource("SpriteFrames_q1ej8")
animation = &"idle"
autoplay = "idle"
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-9.999999, -15)
scale = Vector2(1.00732, 1)
shape = SubResource("CapsuleShape2D_ry2ya")

[node name="ray_right" type="RayCast2D" parent="."]
position = Vector2(10, 0)
target_position = Vector2(4, 0)
collision_mask = 2
hit_from_inside = true

[node name="ray_left" type="RayCast2D" parent="."]
position = Vector2(-21, 0)
target_position = Vector2(-4, 0)
collision_mask = 2
hit_from_inside = true

[node name="ray_up" type="RayCast2D" parent="."]
position = Vector2(-5, 2)
scale = Vector2(2, 2)
target_position = Vector2(0, 5)
collision_mask = 2
hit_from_inside = true

[node name="hurtbox" type="Area2D" parent="."]
position = Vector2(2, -2)
scale = Vector2(1.77403, 1.06778)
collision_layer = 0
collision_mask = 2

[node name="Collision" type="CollisionShape2D" parent="hurtbox"]
position = Vector2(-6.7642603, -12.174792)
shape = SubResource("RectangleShape2D_n5c32")
debug_color = Color(0.849027, 2.35841e-06, 0.44653, 0.42)

[node name="remote" type="RemoteTransform2D" parent="."]

[node name="attack_hitbox_container" parent="." instance=ExtResource("6_061al")]
position = Vector2(-8, -33)

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="hurtbox" to="." method="_on_hurtbox_body_entered"]
